WeetStore.log
uk\ac\warwick\java\cs126\services\WeetStore.java:65: error: illegal start of statement
    }
    ^
1 error
